Migra desde kowl hacia redpanda console
El testigo del proyecto ha pasado a redpanda tras comprar cloudhut, por
lo que las nuevas versiones de la herramienta ahora salen bajo el nombre
de redpanda console. Se actualiza el nombre de la imagen y tag por
defecto para hacer uso de las nuevas imágenes.

--- a/deploy/compose.yaml
+++ b/deploy/compose.yaml
@@ -1,6 +1,6 @@
 services:
   kowl:
-    image: ${IMAGE_NAME:-quay.io/cloudhut/kowl}:${IMAGE_TAG:-master}
+    image: ${IMAGE_NAME:-docker.redpanda.com/redpandadata/console}:${IMAGE_TAG:-latest}
     environment:
       SERVER_LISTENPORT:
       KAFKA_BROKERS:
