Añade healthcheck y variable para analytics

--- a/deploy/.env
+++ b/deploy/.env
@@ -1,7 +1,14 @@
 SERVER_LISTENPORT=8080
 KAFKA_BROKERS=kafka-1:9092,kafka-2:9092,kafka-3:9092
+
 KAFKA_SCHEMAREGISTRY_ENABLED=true
 KAFKA_SCHEMAREGISTRY_URLS=http://schema-registry:8081
+
 CONNECT_ENABLED=true
 CONNECT_CLUSTERS_NAME=connect
 CONNECT_CLUSTERS_URL=http://kafka-connect:8083
+
+ANALYTICS_ENABLED=true
+
+TRAEFIK_AUTH=user:$apr1$md5password
+PUBLIC_HOSTNAME=change.me
